[package]
name = "guessing_game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# dependencies are specified with Semantic Versioning (SemVer)
# [major].[minor].[patch]

[dependencies]
rand = "0.8.3" # short for ^0.8.3, which means any version that is at least 0.8.3 but below 0.9.0